[package]
name = "threadful"
version = "0.1.0"
authors = ["adrian <adrianmihaicovaci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.4"
csv = "1.1"
serde_yaml = "0.8"
regex = "1"
lazy_static = "1.4"
